--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "framer-motion": "^12.0.11",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "react": "^19.0.0",
