--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@liveblocks/node": "^2.16.2",
     "@liveblocks/react": "^2.16.2",
     "@liveblocks/yjs": "^2.16.2",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,9 +27,11 @@
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
